# el-rodeo-api

./: .gitignore  .pre-commit-config.yaml  celerybeat-schedule  main.py  pyproject.toml  ruff.toml
.zed/: debug.json  settings.json
data/: animal_supply_types_data.sql  animal_type_data.sql
doc/: enitity_models.md
dockers_files/: Dockerfile  celery_compose.yml  docker-compose.yml
src/auth/application/exceptions/: authentication.py  user.py
src/auth/application/ports/: token_blacklist_port.py  tokens.py  tokens_port.py
src/auth/application/services/: authentication.py  authentication_service.py
src/auth/application/uses_cases/: change_password.py  change_password_case.py  login_user.py  login_user_case.py  logout_user_case.py  register_user.py  register_user_case.py
src/auth/domain/entities/: __init__.py  _user_entity.py  users.py
src/common/application/: exceptions.py  types.py
src/common/domain/: exceptions.py  repository.py  types.py
src/common/utils/: __init__.py  date_utils.py
tests/: conftest.py  factories.py  mocks.py
tests/integration/: conftest.py
tests/integration/auth/: test_auth_api.py  test_auth_blacklist_integration.py  test_auth_logout_api.py  test_token_blacklist.py
tests/integration/cattle/: test_animal_protocols_api.py  test_animal_types_api.py  test_animals_api.py  test_schedule_events_api.py
tests/integration/finance/: test_animal_supplies_api.py  test_animal_supply_types_api.py  test_purchases_api.py
tests/integration/market/: test_buyers_api.py  test_sales_api.py
tests/unit/auth/: test_auth_services.py  test_auth_use_cases.py  test_user_entity.py
tests/unit/cattle/: test_animal_protocol_services.py  test_animal_protocol_use_cases.py  test_animal_services.py  test_animal_type_services.py  test_animal_type_use_cases.py  test_animal_use_cases.py  test_schedule_event_services.py  test_schedule_event_use_cases.py
tests/unit/finance/: test_animal_supply_services.py  test_animal_supply_type_services.py  test_animal_supply_type_use_cases.py  test_animal_supply_use_cases.py  test_purchase_services.py  test_purchase_use_cases.py
tests/unit/market/: test_buyer_services.py  test_buyer_use_cases.py  test_buyer_value_objects.py  test_sale_services.py  test_sale_use_cases.py  test_sale_value_objects.py
(+302 files in other folders)
