[project]
name = "el-rodeo-api"
version = "0.1.0"
description = "API para la gestion de ganado y finanzas de pequeños productores"
authors = [
    { name = "Franco Muñoz", email = "franco.mz92@hotmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
