[project]
name = "el-rodeo-api"
version = "0.1.0"
description = "API para la gestion de ganado y finanzas de pequeños productores"
authors = [
    { name = "Franco Muñoz", email = "franco.mz92@hotmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "gunicorn>=25.3.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
