[project]
name = "el-rodeo-api"
version = "0.1.0"
description = "API para la gestion de ganado y finanzas de pequeños productores"
authors = [
    { name = "Franco Muñoz", email = "franco.mz92@hotmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "gunicorn>=25.3.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__init__.py", "src/**/tests/*"]
